Implement default notification plugin with SSE event handling and configuration management